styles.css
/* Reset some default browser styles */
* {
    box-sizing: border-box;
}
body, h1, h2, p, ul {
    margin: 0;
    padding: 0;
}

/* Basic styles */
body {
    font-family: Arial, sans-serif;
    line-height: 1.6;
    background-color: #f4f4f4;
    color: #333;
    margin: 0;
    padding: 0;
}
.algonquinBackground {
    background-color: #333;
    padding: 15px;
    border-radius: 10pt;
}
.backgroundImg {
    background-image: url("img/Background.jpg");
    background-position: center;
  background-repeat: no-repeat;
    background-size: cover;
    background-color: gray;
    background-blend-mode: multiply;
}

header {
    background-color: #333;
    color: #fff;
    text-align: center;
    padding: 1rem 0;
}

header h1 {
    margin: 0;
}


nav a {
    color: #fff;
    text-decoration: none;
    margin: 0 1rem;
}

nav a:hover {
    color: #4FC1DB;
    text-decoration: underline;
}

section {
    padding: 2rem;
    text-align: left;
}

.imgRoundedAndSquare {
    border-radius: 15pt;
    width: 250px;
    margin-bottom: 1rem;
}

.colHobbies {
    display: block;
    flex-direction: wrap;
    align-items: center;
    flex-direction: column;
 }

 .sectionBackground {
    background-color: gainsboro;
    padding: 15px;
    border-radius: 10pt;
    margin: 25px;
 }

 section a {
    color: blue;
    text-decoration: none;
    margin: 0 1rem;
}

footer {
    background-color: #333;
    color: #333;
    text-align: center;
    padding: 1rem 0;
    min-height: 500px;
    color: #f4f4f4;
}

footer a {
    color: #fff;
    text-decoration: none;
    margin: 0 1rem;
}

footer a:hover {
    text-decoration: underline;
    color: #fff;
    margin: 0 1rem;
}

footer i {
    color: #fff;
    text-decoration: none;
    margin: 0 1rem;
}

/* Responsive styles */
@media (max-width: 768px) {
    header nav {
        display: block;
        margin-top: 1rem;
    }

    header nav a {
        display: block;
        margin-bottom: 1rem;
    }
}

ul {
    list-style-type: none;
}

/* .experience {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-direction: column;
} */

.projectImgSize
{
    width: 350px;
    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
    border-radius: 5pt;
}

span {
    font-weight: bold;
}

button {
    background-color: #4FC1DB; /* Green */
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    cursor: pointer;
    border-radius: 8px;
    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
    background-image: linear-gradient(to bottom, #4FC1DB, #4FC1DB);
    transition: all 0.3s ease-in-out;
}

button:hover {
    background-color: #4FC1DB;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
}

/* .halfSize {
    width: 50%;
} */

.center {
    text-align: center;
}

section form {
    display: inline-block;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

